--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cmdk": "^0.2.1",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
