--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
